# v

./: gradle.properties  index.html  settings.gradle
.GitHub/workflows/: deploy.yml
.github/workflows/: android_release.yml  deploy.yml  export.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fomm_engine.cpp  fomm_engine.h  motionforge-engine.cpp  native_bridge.cpp
app/src/main/java/com/motionforge/app/: FommEngineWrapper.kt  MainActivity.kt  MotionEngine.kt  VideoEncoder.kt
app/src/main/res/layout/: activity_main.xml
css/: styles.css
js/: app.js  model-cache.js  motion-engine.js  motion-engine.sh
scripts/: build_native.sh  fetch_models.sh  setup_env.sh
